--- a/frontend/src/app/list/list.component.html
+++ b/frontend/src/app/list/list.component.html
@@ -23,5 +23,14 @@
         </div>
     </div>
 
+    <mat-divider></mat-divider>
+
+    <div class="row">
+        <div class="col">
+            <h3 class="mat-display-1 text-center">Next Shop</h3>
+            Select shops in order to get a recommendation for your next shop.
+        </div>
+    </div>
+
 
 </div>
