--- a/frontend/src/app/list/list.component.scss
+++ b/frontend/src/app/list/list.component.scss
@@ -3,7 +3,13 @@
 }
 
 .accept {
-    width: 100%;
+    width: 100%;    
+}
+
+mat-divider {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-top-color: darkgray;
 }
 
 .spacer {
