--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -6,9 +6,9 @@ mat-icon {
     padding-right: 40px;
 }
 
-mat-drawer-content::before {
-    content: '';
-    display: inline-block;
-    width: 100%;
-    height: 40px;
-}
+// mat-drawer-content::before {
+//     content: '';
+//     display: inline-block;
+//     width: 100%;
+//     height: 40px;
+// }
