--- a/frontend/src/app/list/list.component.html
+++ b/frontend/src/app/list/list.component.html
@@ -8,8 +8,8 @@
     <div class="row">
         <div class="col">
             <mat-selection-list #list>
-                <mat-list-option *ngFor="let shop of shops.shop_list">
-                    {{shop.name}}
+                <mat-list-option *ngFor="let shop of shops.shop_list | keyvalue">
+                    {{shop.key}}
                 </mat-list-option>
             </mat-selection-list>
         </div>
