--- a/frontend/src/app/display/display.component.html
+++ b/frontend/src/app/display/display.component.html
@@ -1,8 +1,8 @@
-<div class="w-100 h-100 background" [ngClass]="{'closed': shop.isStop, 'opened': !shop.isStop}">
-    <div class="container text-center h-75" style="display: flex">
+<div class="w-100 h-100" [ngClass]="{'closed': shop.isStop, 'opened': !shop.isStop}">
+    <div class="container text-center h-100" style="display: flex">
         <div class="row justify-content-center align-self-center">
             <div *ngIf="shop.isStop">
-                <h1 class="mat-display-3 ">Wait until customers leave the shop.</h1>
+                <h1 class="mat-display-3 text-white">Wait until customers leave the shop.</h1>
             </div>
 
             <div *ngIf="!shop.isStop">
