--- a/frontend/src/app/list/list.component.scss
+++ b/frontend/src/app/list/list.component.scss
@@ -1,5 +1,6 @@
 .container {
     max-width: 500px;
+    padding-top: 30px;
 }
 
 .accept {
@@ -15,3 +16,5 @@ mat-divider {
 .spacer {
     flex: 1 1 auto;
 }
+
+
