--- a/frontend/src/app/monitor/monitor.component.html
+++ b/frontend/src/app/monitor/monitor.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-6" *ngFor="let shop of shops.shop_list">
+        <div class="col-lg-6" *ngFor="let shop of shops.shop_list | keyvalue">
             <mat-card>
                 <mat-card-header>
-                    <mat-card-title>{{shop.name}}</mat-card-title>
-                    <mat-card-subtitle>{{shop.people}}</mat-card-subtitle>
+                    <mat-card-title>{{shop.key}}</mat-card-title>
+                    <mat-card-subtitle>{{shop.value.people}}</mat-card-subtitle>
                   </mat-card-header>
                   <!-- <mat-card-content>
                     <p>                      
