--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -22,7 +22,11 @@
         <mat-icon>store</mat-icon> Select Shops
       </a>
       <a mat-list-item (click)="showNavbar()" [routerLink]="'/monitor'">
-        <mat-icon>analytics</mat-icon> Monitor
+        <mat-icon>analytics</mat-icon> Current Occupancy
+      </a>
+
+      <a mat-list-item (click)="showNavbar()" [routerLink]="'/history'">
+        <mat-icon>timeline</mat-icon> History
       </a>
 
       <mat-divider></mat-divider>
