--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -18,6 +18,9 @@
     <mat-nav-list>
       <a mat-list-item (click)="showNavbar()" routerLink="/" style="height: 0;"></a>
 
+      <a mat-list-item (click)="showNavbar()" [routerLink]="'/next'">
+        <mat-icon>redo</mat-icon> Next Shop Recommendation
+      </a>
       <a mat-list-item (click)="showNavbar()" [routerLink]="'/list'">
         <mat-icon>store</mat-icon> Select Shops
       </a>
