--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -1,9 +1,6 @@
-mat-card {
-    max-width: 700px;
-    margin: 2em auto;
-    text-align: center;
-}
-
 mat-form-field {
     display: block;
+    font-size: 20px;
 }
+
+
