--- a/frontend/src/app/list/list.component.html
+++ b/frontend/src/app/list/list.component.html
@@ -17,7 +17,7 @@
 
     <div class="row">
         <div class="col">
-            <button class="accept" color="primary" mat-stroked-button>
+            <button class="accept" color="primary" mat-stroked-button (click)="sendShopList()">
                 <mat-icon>done</mat-icon>Send Shop List
             </button>
         </div>
