http get and post requests

--- a/frontend/src/app/list/list.component.html
+++ b/frontend/src/app/list/list.component.html
@@ -7,8 +7,8 @@
     </div>
     <div class="row">
         <div class="col">
-            <mat-selection-list #list>
-                <mat-list-option *ngFor="let shop of shops.shop_list | keyvalue">
+            <mat-selection-list #list [(ngModel)]="selectedShops">
+                <mat-list-option *ngFor="let shop of shops.shop_list | keyvalue" [value]="shop.value">
                     {{shop.key}}
                 </mat-list-option>
             </mat-selection-list>
