--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -38,7 +38,7 @@
                     <!--Footer-->
                     <div class="modal-footer mx-5 pt-3 mb-1">
                         <p class="font-small grey-text d-flex justify-content-end">You do not have an account?
-                            <a class="blue-text ml-1" (click)="openRegisterForm()"> Register</a>
+                            <a class="blue-text ml-1" (click)="openRegisterForm()"> Sign Up</a>
                         </p>
                     </div>
                 </mdb-card>
@@ -47,23 +47,23 @@
             <div *ngIf="!login">
                 <mdb-card>
                     <mdb-card-header class="info-color white-text text-center py-4">
-                      <h1>Registration</h1> 
+                      <h1>Sign Up</h1> 
                     </mdb-card-header>
                     <mdb-card-body class="mx-4">
                       <form class="pb-2" [formGroup]="registerForm"  (ngSubmit)="onSubmit()">
                         <mat-error *ngIf="loginInvalid">
-                          The username and password were not recognised
+                          The username and password were not recognised.
                         </mat-error>
                           <mat-form-field>
                             <input matInput placeholder="Email" formControlName="username" required>
                             <mat-error>
-                              Please provide a valid email address
+                              Please provide a valid email address.
                             </mat-error>
                           </mat-form-field>
                           <mat-form-field class="full-width-input">
                             <input matInput type="password" placeholder="Password" formControlName="password" required>
                             <mat-error>
-                              Please provide a valid password
+                              Please provide a valid password.
                             </mat-error>
                           </mat-form-field>
                       </form>
@@ -71,7 +71,7 @@
 
                         <div class="text-center mb-3">
                             <button (window:keypress)="doRegisterEnter($event)" [disabled]="!registerForm.valid" mdbBtn gradient="blue" block="true" rounded="true"
-                                class="z-depth-1a waves-light" (click)="doRegister()" mdbWavesEffect>Register</button>
+                                class="z-depth-1a waves-light" (click)="doRegister()" mdbWavesEffect>Sign Up</button>
                         </div>
 
                     </mdb-card-body>
