--- a/frontend/src/app/list/list.component.html
+++ b/frontend/src/app/list/list.component.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col">
             <mat-selection-list #list [(ngModel)]="selectedShops">
-                <mat-list-option *ngFor="let shop of shops.shop_list | keyvalue" [value]="shop.value.shop_id">
+                <mat-list-option *ngFor="let shop of shops.shopMap | keyvalue" [value]="shop.value.shop_id">
                     {{shop.value.name}}
                 </mat-list-option>
             </mat-selection-list>
