--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -16,19 +16,19 @@
 <mat-drawer-container>
   <mat-drawer #drawer>
     <mat-nav-list>
-      <a mat-list-item (click)="showNavbar()" routerLink="/" style="height: 0;"></a>
+      <a mat-list-item routerLink="/" style="height: 0;"></a>
 
-      <a mat-list-item (click)="showNavbar()" [routerLink]="'/next'">
+      <a mat-list-item [routerLink]="'/next'">
         <mat-icon>redo</mat-icon> Next Shop Recommendation
       </a>
-      <a mat-list-item (click)="showNavbar()" [routerLink]="'/list'">
+      <a mat-list-item [routerLink]="'/list'">
         <mat-icon>store</mat-icon> Select Shops
       </a>
-      <a mat-list-item (click)="showNavbar()" [routerLink]="'/monitor'">
+      <a mat-list-item [routerLink]="'/current'">
         <mat-icon>analytics</mat-icon> Current Occupancy
       </a>
 
-      <a mat-list-item (click)="showNavbar()" [routerLink]="'/history'">
+      <a mat-list-item [routerLink]="'/history'">
         <mat-icon>timeline</mat-icon> History
       </a>      
 
