--- a/frontend/src/app/sensordata/sensordata.component.html
+++ b/frontend/src/app/sensordata/sensordata.component.html
@@ -1,1 +1,16 @@
-<p>sensordata works!</p>
+<!-- <div class="container">
+    <div class="row">
+        <div style="display: block">
+            <canvas mdbChart
+                chartType="line"
+                [datasets]="chartDatasets"
+                [labels]="chartLabels"
+                [colors]="chartColors"
+                [options]="chartOptions"
+                [legend]="true"
+                (chartHover)="chartHovered($event)"
+                (chartClick)="chartClicked($event)">
+            </canvas>
+          </div>
+    </div>
+</div> -->
